--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension App::moduleuninstall
 
+0.03    Tue Aug  3 01:01:22 2010
+        - thanks miyagawa-san!
+
 0.01    Wed Mar 10 23:26:16 2010
         - original version
