--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Revision history for Perl extension App::moduleuninstall
+Revision history for Perl extension App::pmuninstall
 
 0.18    Sun Jun 26 13:20:05 2011
         - modularization
